--- a/ansible/vars/universe.yml
+++ b/ansible/vars/universe.yml
@@ -1,8 +1,6 @@
 ansible_host_machine:
-  ansible_host: 192.168.64.2
+  ansible_host: flookaa
   ansible_connection: ssh
-  ansible_ssh_private_key_file: ~/ssh-keys/lxd_dev.pem
-  ansible_user: ubuntu
   ansible_python_interpreter: /usr/bin/python3
   ansible_become: true
   ansible_become_method: sudo
