--- a/ansible/templates/nginx/nginx.conf
+++ b/ansible/templates/nginx/nginx.conf
@@ -10,6 +10,10 @@ http {
     include "{{ nginx_path }}/conf/mime.types";
     default_type application/octet-stream;
 
+    # Trust X-Forwarded-For headers from localhost
+    set_real_ip_from 127.0.0.1;
+    set_real_ip_from ::1;
+
     ## Logging
     log_format json_analytics escape=json '{'
         '"msec":"$msec",'
@@ -69,11 +73,6 @@ http {
         image/svg+xml;
     gzip_proxied any;
     gzip_min_length 1000;
-
-    ## Real IP
-    set_real_ip_from 0.0.0.0/0;
-    real_ip_header X-Forwarded-For;
-    real_ip_recursive on;
 
     ## Cache-Control map
     map $sent_http_content_type $cache_control {
