Add google provider for signup

--- a/ansible/app.playbook.yml
+++ b/ansible/app.playbook.yml
@@ -6,7 +6,7 @@
   vars_files:
     - universe.yml
   roles:
-    - init_container
+    # - init_container
 
   tasks:
     - name: Ensure app group exists
