--- a/front-end/package.json
+++ b/front-end/package.json
@@ -43,6 +43,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.15",
     "immer": "^10.2.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
